refactor layout with new bottom action bar

--- a/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton *ngIf="vm$ | async; let vm">
+<app-main-skeleton *ngIf="vm$ | async; let vm" paddingDisabled=true>
 
   <ng-container navbar>
 
