--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.html
@@ -24,7 +24,7 @@
 
     </div>
     
-    <div class="content bottom-fab-padding">
+    <div class="content">
         <ng-content select="[content]"></ng-content>
     </div>  
 
