--- a/projects/kbtv-client/src/app/feature-modules/profile/profile/profile.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/profile/profile/profile.component.html
@@ -45,4 +45,6 @@
     </app-list-item>
     <mat-divider inset=true></mat-divider>
 
+    <app-bottom-action-bar bottombar [actions]="bottomActions">
+    </app-bottom-action-bar>
 </app-main-skeleton>
