--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
@@ -10,5 +10,8 @@
     (labelClicked)="openTimesheetForm(null, {date: $event})">
   </app-user-timesheet-week-view>
 
+  <app-bottom-action-bar bottombar [actions]="bottomActions">
+  </app-bottom-action-bar>
+
 </app-main-skeleton>
 
