--- a/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.html
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.html
@@ -19,9 +19,9 @@
         <router-outlet #outlet="outlet"></router-outlet>    
     </div>
 
-    <app-main-bottom-nav class="mat-elevation-z5" fxHide.gt-xs 
+    <!-- <app-main-bottom-nav class="mat-elevation-z5" fxHide.gt-xs 
       [navigations]="config.bottomNavigations">
-    </app-main-bottom-nav>
+    </app-main-bottom-nav> -->
 
   </mat-sidenav-content>
 
