--- a/projects/kbtv-client/src/app/shared/components/app-button/app-button.component.html
+++ b/projects/kbtv-client/src/app/shared/components/app-button/app-button.component.html
@@ -10,7 +10,7 @@
 
         <mat-icon *ngIf="config.icon">{{ config.icon }}</mat-icon>
         <mat-icon *ngIf="config.svgIcon" [svgIcon]="config.svgIcon"></mat-icon> 
-        {{ config.text }}     
+        <ng-container *ngIf="config.type !== ButtonTypes.Icon">{{ config.text }}</ng-container> 
     </button>
 </ng-container>
 
