--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
@@ -1,7 +1,6 @@
-<style> .selectable-container{ display: flex; flex-wrap: wrap; overflow:hidden } </style>
-<app-main-skeleton *ngIf="vm$ | async; let vm" [fabs]="vm.fabs">
+<app-main-skeleton *ngIf="vm$ | async; let vm" [bottomBarHidden]="vm.selectionBarConfig">
 
-    <app-main-top-nav-bar navbar [config]="vm.navConfig" >
+    <app-main-top-nav-bar navbar [config]="vm.selectionBarConfig || navConfig" >
     </app-main-top-nav-bar>
 
     <div cdkSelectableContainer #selectableContainer (selectionChanged)="onSelectionChange($event)">
@@ -16,5 +15,9 @@
             <mat-divider></mat-divider>
         </app-selectable-card>
     </div>
+
+    <app-bottom-action-bar bottombar
+        [fab]="actionFab">
+    </app-bottom-action-bar>
 
 </app-main-skeleton>
