--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -1,6 +1,6 @@
-<app-main-skeleton *ngIf="vm$ | async; let vm" [fabs]="vm.fabs">
+<app-main-skeleton *ngIf="vm$ | async; let vm" [bottomBarHidden]="vm.selectionBarConfig">
 
-    <app-main-top-nav-bar navbar [config]="vm.navConfig" >
+    <app-main-top-nav-bar navbar [config]="vm.selectionBarConfig || navConfig" >
     </app-main-top-nav-bar>
 
     <div cdkSelectableContainer #selectableContainer (selectionChanged)="onSelectionChange($event)" class="image-container">
@@ -12,6 +12,11 @@
         </app-selectable-card>  
 
     </div>
+
+    <app-bottom-action-bar bottombar
+        [fab]="actionFab" 
+        [actions]="bottomActions">
+    </app-bottom-action-bar>
 
 </app-main-skeleton>
 
