--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
@@ -5,7 +5,6 @@
     width:100%;
     height:100%;
     position: relative;
-  
     .header-container{
         width:100%;
         text-align:center;
@@ -47,8 +46,8 @@
     .content {
         background:white;
         display:block;
-        width:100%;
-       
+        width:100%;   
+        padding-bottom: 88px;
         position: relative;
         z-index: 2;
         transform: translateY(-20px);
