--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -10,6 +10,10 @@
             (timesheetClicked)="openTimesheetCard($event)">
         </app-timesheet-admin-list-view>
     </ng-container>
+    
+    <app-bottom-action-bar bottombar
+        [actions]="bottomActions">
+    </app-bottom-action-bar>
 
 </app-main-skeleton>
 
