--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list.component.html
@@ -12,6 +12,10 @@
         </app-timesheet-admin-week-list-view>
     </ng-container>
 
+    <app-bottom-action-bar bottombar
+        [actions]="bottomActions">
+    </app-bottom-action-bar>
+
 </app-main-skeleton>
 
 <ng-template #noContent>
