--- a/projects/kbtv-client/src/app/shared-app/components/list-item/list-item.component.html
+++ b/projects/kbtv-client/src/app/shared-app/components/list-item/list-item.component.html
@@ -1,4 +1,5 @@
-<span fxLayout="row" fxLayoutAlign="start center" class="p-4 bg-card" 
+<style>.list-item{ font-size: 15px; font-weight: 500; padding: 16px }</style>
+<span fxLayout="row" fxLayoutAlign="start center" class="bg-card list-item" 
     matRipple [matRippleDisabled]="rippleDisabled"> 
 
     <ng-content select="[left-side]"></ng-content>
