--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -55,7 +55,7 @@
     <div class="mat-body-2 ml-5 mt-3">Beskrivelse</div>
     <app-list-item rippleDisabled=true>
       <mat-icon left-side class="pl-2 pr-2">comment</mat-icon>
-      <span style="white-space:normal">{{ mission.description }}</span>
+      <span style="white-space:normal" class="mat-body">{{ mission.description }}</span>
     </app-list-item>
     <mat-divider inset=true></mat-divider>
   </ng-container>
