--- a/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
@@ -1,5 +1,5 @@
 
-  <mat-toolbar fxLayout="column" fxLayoutAlign="center stretch" class="mb-2 mt-2">
+  <mat-toolbar fxLayout="column" fxLayoutAlign="center stretch" class="mb-4 mt-4">
 
     <ng-container *ngIf="config.isOnline else offlineHeader">
       <span class="mat-small color-accent ellipsis"> Tilkoblet internett</span>
@@ -8,7 +8,7 @@
       <span class="mat-small color-warn ellipsis">Frakoblet internett</span>
     </ng-template>
 
-    <span class="mat-subheading-1 ellipsis" *ngIf="config.user" style="line-height:1;margin:0;">
+    <span class="mat-subheading-1 ellipsis" *ngIf="config.user" style="margin:0;">
       {{ config.user.firstName }} {{ config.user.lastName }}
     </span>
 
