--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton *ngIf="vm$ | async; let vm" paddingDisabled=true>
+<app-main-skeleton *ngIf="vm$ | async; let vm" contentWrapperClass="p-0">
     
     <app-header-layout-skeleton [navConfig]="navConfig" [navOverlayDisabled]="!vm.mission?.fileName">
 
