--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -1,5 +1,5 @@
 
-<app-main-skeleton *ngIf="vm$ | async; let vm" navTogglerDisabled=true paddingDisabled=true>
+<app-main-skeleton *ngIf="vm$ | async; let vm" navTogglerDisabled=true contentWrapperClass="p-0">
 
     <ng-container navbar>
   
