--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton paddingDisabled=true *ngIf="vm$ | async; let vm">
+<app-main-skeleton contentWrapperClass="bottom-bar-padding" *ngIf="vm$ | async; let vm">
 
     <ng-container navbar *ngIf="vm$ | async; let navVm">
         <app-main-top-nav-bar [config]="navConfig" >
