--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton navTogglerDisabled=true paddingDisabled=true>
+<app-main-skeleton navTogglerDisabled=true contentWrapperClass="p-0">
 
     <ng-container navbar>
         <app-main-top-nav-bar [config]="navConfig" >
