--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-list/timesheet-admin-list.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton navTogglerDisabled=true paddingDisabled=true>
+<app-main-skeleton navTogglerDisabled=true contentWrapperClass="p-0">
 
     <app-main-top-nav-bar navbar [config]="navConfig$ | async">
     </app-main-top-nav-bar>
