--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week.component.html
@@ -1,4 +1,4 @@
-<app-main-skeleton paddingDisabled=true>
+<app-main-skeleton contentWrapperClass="bottom-bar-padding">
 
   <app-main-top-nav-bar navbar [config]="navConfig$ | async" >
   </app-main-top-nav-bar>
