--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
@@ -27,6 +27,10 @@
     margin-bottom: -56px;
 }
 
+.default-main-content{
+   padding: 8px 0px 88px 0px
+}
+
 ::ng-deep.main-skeleton-overlay{
     position:absolute;
     top:0;
