--- a/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
@@ -13,6 +13,9 @@ mat-toolbar{
 
 .overlay-nav{
     color:white;
+    position:absolute;
+    top:0;
+    z-index:1;
     .primary-button, mat-spinner {
         background: rgba(0,0,0,0.5);
         border-radius: 100%;
