--- a/projects/kbtv-client/src/styles/styles.scss
+++ b/projects/kbtv-client/src/styles/styles.scss
@@ -118,9 +118,14 @@ a {
 
 .display-block{ display: block }
 
-.image_viewer_dialog{max-width:none!important;}
-
-.image_viewer_dialog .mat-dialog-container{background-color:black!important;padding:0!important}
+.image_viewer_dialog{
+  max-width:none!important;
+  .mat-dialog-container{
+    background-color:black!important;
+    padding:0!important;
+    border-radius: 0px;
+  }
+}
 
 .notification-error{
   margin-bottom:$bottom-nav-height + $gap-size * 2px!important;
