add bottom bar elevation

--- a/projects/kbtv-client/src/app/home/home-bottom-bar/home-bottom-bar.component.html
+++ b/projects/kbtv-client/src/app/home/home-bottom-bar/home-bottom-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent" *ngIf="vm$ | async; let vm">
+<mat-toolbar color="accent" *ngIf="vm$ | async; let vm" class="mat-elevation-z3">
 
   <button mat-icon-button aria-label="Toggle sidenav" (tap)="toggleDrawer()" fxHide.gt-xs>
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
