add auto focus on search bar when unhidden

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-list/mission-list.component.html
@@ -8,8 +8,8 @@
         [config]="topNavConfig">
       </app-main-top-nav-bar>
 
-      <app-search-bar class="w-100" 
-        [fxHide]="searchBarHidden"  
+      <app-search-bar 
+        [hidden]="searchBarHidden"  
         [config]="searchBar" 
         [extraButtons]="searchBarBtns">
       </app-search-bar>
